--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -126,20 +126,20 @@
               <div class="base relative">
                 <div class="share-dialog">
                   <div class="flex flex-col items-start w-full">
-                    <a class="flex flex-row items-center w-full hover:bg-gray-200 py-3 px-2 cursor-pointer">
+                    <button class="facebook_share flex flex-row items-center w-full hover:bg-gray-200 py-3 px-2 cursor-pointer" data-url="https://knftdigital-4joj4.ondigitalocean.app/product/2" data-title="{{product.title}}">
                       <i class="text-2xl bi bi-facebook " style="color: #3b5998;"></i>
                       <span class="ml-3">Share on Facebook</span>
-                    </a>
+                    </button>
 
-                    <a class="flex flex-row items-center w-full hover:bg-gray-200 py-3 px-2 cursor-pointer">
+                    <button class="twitter_share  flex flex-row items-center w-full hover:bg-gray-200 py-3 px-2 cursor-pointer">
                       <i class="text-2xl bi bi-twitter " style="color: #1da1f2;"></i>
                       <span class="ml-3"> Share onTwitter</span>
-                    </a>
+                    </button>
 
-                    <a class="flex flex-row items-center w-full hover:bg-gray-200 py-3 px-2 cursor-pointer">
+                    <button class="flex flex-row items-center w-full hover:bg-gray-200 py-3 px-2 cursor-pointer">
                       <i class="text-2xl bi bi-instagram " style="color: #3b5998;"></i>
                       <span class="ml-3">Share on Instagram</span>
-                    </a>
+                    </button>
                   </div>
                   <div class="link w-full">
                     <i class="text-2xl fa fa-link " style="color: #3b5998;"></i>
@@ -286,7 +286,14 @@
     shareDialog.classList.add('is-open');
   });
 
-
+  facebook_share = document.querySelector('.facebook_share');
+  facebook_share.addEventListener('click', event => {
+    var url = facebook_share.getAttribute('data-url')
+    console.log(event)
+    var text = facebook_share.getAttribute('data-title')
+    window.open("https://twitter.com/intent/tweet?text=" + text + "&url=" + url);
+    // window.open('http://twitter.com/intent?url=' + encodeURIComponent(this.value) + '&text=' + text, '', 'left=0,top=0,width=550,height=450,personalbar=0,toolbar=0,scrollbars=0,resizable=0');
+  });
   $('html').click(function(e) {
     if ($(e.target).parents('.base').length < 1) {
 
