--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,7 @@
   <title>{% block page_name %} {% endblock page_name %} | KNFT</title>
 
   {% if request.resolver_match.url_name == "detail" %}
-  <title>{{product.title}} | KNFT</title>
 
-  <meta name="description" content="This is the description for the homepage.">
 
   <meta property="og:title" content=" KNFT" />
   <meta property="og:site_name" content="knft" />
@@ -31,16 +29,15 @@
 
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="https://knftdigital-4joj4.ondigitalocean.app/product/{{product.pk}}">
+  <meta name="twitter:url" content="https://knftdigital-4joj4.ondigitalocean.app/product/{{product.pk}}">
   <meta name="twitter:title" content="{{product.title}}">
+  <meta name="twitter:description" content="{{product.description|striptags|truncatewords:20}}">
   <meta name="twitter:image" content="{{product.image.file360.url}}">
   <meta name="twitter:image:alt" content="{{product.title}}">
-  <meta name="twitter:description" content="{{product.description|striptags|truncatewords:20}}">
 
 
   {% else %}
   <meta name="description" content="This is the description for the homepage.">
-
   <meta property="og:title" content=" KNFT" />
   <meta property="og:site_name" content="knft" />
   <meta property="og:description" content="" />
