--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -126,17 +126,17 @@
               <div class="base relative">
                 <div class="share-dialog">
                   <div class="flex flex-col items-start w-full">
-                    <button class="facebook_share flex flex-row items-center w-full hover:bg-gray-200 py-3 px-2 cursor-pointer" data-url="https://knftdigital-4joj4.ondigitalocean.app/product/{{product.pk}}" data-title="{{product.title}}">
+                    <button class="facebook_share flex flex-row items-center w-full hover:bg-gray-200 py-3 px-2 cursor-pointer" data-url="https://k-nft.io/product/{{product.pk}}" data-title="{{product.title}}">
                       <i class="text-2xl bi bi-facebook " style="color: #3b5998;"></i>
                       <span class="ml-3">Share on Facebook</span>
                     </button>
 
-                    <button class="twitter_share  flex flex-row items-center w-full hover:bg-gray-200 py-3 px-2 cursor-pointer" data-url="https://knftdigital-4joj4.ondigitalocean.app/product/{{product.pk}}" data-title="{{product.title}}">
+                    <button class="twitter_share  flex flex-row items-center w-full hover:bg-gray-200 py-3 px-2 cursor-pointer" data-url="https://k-nft.io/product/{{product.pk}}" data-title="{{product.title}}">
                       <i class="text-2xl bi bi-twitter " style="color: #1da1f2;"></i>
                       <span class="ml-3"> Share onTwitter</span>
                     </button>
 
-                    <button class="copy_link  flex flex-row items-center w-full hover:bg-gray-200 py-3 px-2 cursor-pointer" data-url="https://knftdigital-4joj4.ondigitalocean.app/product/{{product.pk}}" data-title="{{product.title}}">
+                    <button class="copy_link  flex flex-row items-center w-full hover:bg-gray-200 py-3 px-2 cursor-pointer" data-url="https://k-nft.io/product/{{product.pk}}" data-title="{{product.title}}">
                       <i class=" text-2xl fa fa-link " style="color: #3b5998;"></i>
                       <span class="ml-3">
                         Copy Link
