--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -8,7 +8,7 @@
   <nav class="h-full text-white">
     <ul class="flex items-center h-full text-sm font-medium">
       <li class="ml-6">
-        <a href="{% url "authors:list" %}" class=" hover:text-primary">AUTHOR</a>
+        <a href="{% url "authors:list" %}" class=" hover:text-primary">ARTIST</a>
       </li>
       <li class="ml-6">
         <a href="{% url "products:productList" %}" class=" hover:text-primary">COLLECTION</a>
