--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -30,7 +30,7 @@
     <div class="flex flex-col items-center justify-center h-full">
       <h2 class="text-6xl font-bold text-white ">K-NFT Art Gallery</h2>
       <p class="mt-6 text-xl text-slate500 font-extralight">
-        {{products.count}} works
+        {{count}} works
       </p>
     </div>
     <div class="flex flex-col items-center justify-center h-full w-full py-3 bg-slate700 rounded-lg px-3 -mb-12" style="max-width:1200px;height:100px;">
