--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -98,7 +98,7 @@
       </form> -->
     </div>
   </div>
-  <section style="max-width:1200px;" class="mt-24">
+  <section style="max-width:1200px;" class="mt-24 container mx-auto">
 
     {% if products.count > 0 %}
 
