--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
   <header class="absolute top-0 z-30 w-full bg-transparent" style="height:80px; ">
     {% include "partials/header.html" %}
   </header>
-  <div class="">
+  <div>
     {% block content %}
     {% endblock %}
   </div>
