--- a/templates/license.html
+++ b/templates/license.html
@@ -8,11 +8,11 @@
   <div class="flex flex-col items-center justify-center w-full pt-24 pb-12" style="
       background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 20%, rgba(0, 0, 0, 0.7) 50%,rgba(0, 0, 0, 0.8) 100%), url('{% static "img/loveBack.jpeg"%}') no-repeat center center;height:300px;">
     <div class="flex flex-col items-center justify-center h-full ">
-      <h2 class="text-6xl font-bold text-white ">NFT licensing</h2>
+      <h2 class="text-3xl lg:text-6xl font-bold text-white ">NFT licensing</h2>
 
     </div>
   </div>
-  <section class="flex flex-col items-center justify-center py-24 " style="max-width:1200px;">
+  <section class="flex flex-col items-center justify-center py-24 container mx-auto px-3 lg:px-6">
 
     <p class="mt-12 text-lg leading-9 text-justify text-slate500">
       The NFT Seller is referred to as the “Grantor.” The NFT Buyer is referred to as the “Grantee.” The works are associated with digital works (digital image, video, audio, or other digital assets). NFT purchase is buying the Non-fungible token and is licensing the underlying digital art, music, or other assets under the terms set forth below, or other terms set forth on the listing page.
