--- a/templates/authors/author_detail.html
+++ b/templates/authors/author_detail.html
@@ -42,15 +42,15 @@
 <div class="flex flex-col items-center w-full min-h-screen ">
   <div class="flex flex-col items-center justify-center w-full pt-24 pb-12" style="background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 20%, rgba(0, 0, 0, 0.7) 50%,rgba(0, 0, 0, 0.8) 100%), url('{% static "img/loveBack.jpeg" %}') no-repeat center center; height:300px;">
     <div class="flex flex-col items-center justify-center h-full">
-      <h2 class="text-6xl font-bold text-white ">{{author.name}}'s Collection</h2>
+      <h2 class="text-2xl lg:text-6xl font-bold text-white ">{{author.name}}'s Collection</h2>
       <p class="mt-6 text-xl text-slate500 font-extralight">
         {{count}} works
       </p>
     </div>
 
   </div>
-  <section style="max-width:1200px;" class="grid w-full grid-cols-3 gap-6 flex-1 mt-6">
-    <div class="col-spans-2 w-full">
+  <section class="grid w-full grid-cols-3 gap-6 flex-1 mt-6 container mx-auto">
+    <div class="col-span-3 lg:col-spans-2 px-3 lg:p-0 ">
       <div class="flex flex-row items-center">
         <img src="{{author.avator.thumnail.url}}" style="width: 80px;height: 80px;" class="border-2 rounded-full overflow-hidden" />
         <div class="ml-6 ">
@@ -85,7 +85,7 @@
         {% endif %}
       </div>
     </div>
-    <div class="col-span-2">
+    <div class="col-span-3 lg:col-span-2">
       <ul class="tabs w-full px-3 py-1">
         <li class="tab-link current" data-tab="tab-1">Project</li>
         <li class="tab-link text-white" data-tab="tab-2">Editions</li>
@@ -102,7 +102,7 @@
                 <source src="{{project.image.file360.url}}" />
               </video>
               {% else %}
-              <img src="{{project.image.file360.url}}" style="height: 220px;" class="cursor-pointer " />
+              <img src="{{project.image.file360.url}}" style="height: 220px;" class="cursor-pointer w-full " />
               {% endif %}
             </div>
             <div class="flex flex-col items-start w-full p-3 bg-gray-200" style="height: 120px;">
