--- a/templates/authors/author_list.html
+++ b/templates/authors/author_list.html
@@ -6,22 +6,22 @@
 <div class="flex flex-col items-center w-full ">
   <div class="flex flex-col items-center justify-center w-full pt-24 " style="background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 20%, rgba(0, 0, 0, 0.7) 50%,rgba(0, 0, 0, 0.8) 100%), url('{% static "img/loveBack.jpeg" %}') no-repeat center center; height:300px;">
     <div class="flex flex-col items-center justify-center h-full">
-      <h2 class="text-6xl font-bold text-white ">K-NFT Authors</h2>
+      <h2 class="text-2xl lg:text-6xl font-bold text-white ">K-NFT Authors</h2>
       <p class="mt-6 text-xl text-slate500 font-extralight">
         {{authors.count}} authors
       </p>
     </div>
-    <div class="flex flex-col items-center justify-center  w-full py-3 bg-slate700  rounded-lg px-3 -mb-12 " style="max-width:1200px;height:100px;">
-      <form method='GET' class="grid grid-cols-3 gap-3 w-full">
+    <div class="flex flex-col items-center justify-center     container px-3 lg:px-6 ">
+      <form method='GET' class="grid grid-cols-3 gap-3 w-full  py-3 bg-slate700 px-3 rounded-lg">
         <input type='text' name='q' value='{{ request.GET.q }}' class="rounded-md px-3  col-span-2 " style="height: 40px;" placeholder="Search by name">
-        <button class="col-span-1 px-3 py-2 bg-slate500 w-full rounded-md cursor-pointer" style="height: 40px;"><i class="bi bi-search"></i></button>
+        <button class="col-span-1 px-3 py-2 bg-slate500  rounded-md cursor-pointer" style="height: 40px;"><i class="bi bi-search"></i></button>
       </form>
     </div>
   </div>
-  <section style="max-width:1200px;" class="mt-24">
+  <section class="mt-24 container mx-auto">
 
     {% if authors.count > 0 %}
-    <div class="grid w-full grid-cols-5 gap-24 ">
+    <div class="grid w-full grid-cols-5 gap-24 justify-items-center">
       {% for author in authors %}
       <a href="/author/{{author.id}}" class="bg-white rounded-md overflow-hidden col-span-1 ">
         <img src="{{author.avator.file360.url}}" class="object-cover" style="height:160px;" />
@@ -31,12 +31,12 @@
         </div>
       </a>
       {% endfor %}
-      <div class="col-span-5 flex flex-col items-center pb-12 text-white">
+      <div class="col-span-5 flex flex-row items-center justify-center pb-12 text-white mt-6">
         {% if page_obj.has_previous %}
         <a href="?page={{page_obj.previous_page_number}}">Previous</a>
         {% endif %}
         <p>
-          Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
+          {{page_obj.number}} of {{page_obj.paginator.num_pages}}
         </p>
 
         {% if page_obj.has_next  %}
