--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,21 +19,21 @@
   <div class="flex flex-col items-center justify-center w-full pt-24 pb-12" style="
       background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 20%, rgba(0, 0, 0, 0.7) 50%,rgba(0, 0, 0, 0.8) 100%), url('{% static "img/loveBack.jpeg"%}') no-repeat center center;height:300px;">
     <div class="flex flex-col items-center justify-center h-full ">
-      <h2 class="text-6xl font-bold text-white ">CONTACT</h2>
+      <h2 class="text-3xl lg:text-6xl font-bold text-white ">CONTACT</h2>
       <p class="mt-6 text-xl text-slate500 font-extralight">
         Feel Free to Get in Touch With Us!
       </p>
     </div>
   </div>
-  <section class="flex flex-col items-center justify-center py-24 " style="max-Width:1200px;">
-    <div class="flex flex-row items-start w-full ">
-      <div class="flex flex-col items-start justify-center flex-1 h-full p-24 ">
+  <section class="flex flex-col items-center justify-start py-24 container mx-auto ">
+    <div class="grid grid-cols-1 lg:grid-cols-2 place-content-stretch">
+      <div class="flex flex-col items-start justify-start flex-1 h-full px-3 lg:p-24 ">
         <p class="text-4xl text-white">Contact us</p>
         <p class="mt-3 text-white">
           A member of our support staff will respond as soon as possible.
         </p>
       </div>
-      <div class="flex flex-col items-start justify-center flex-1 w-full h-full p-24 ">
+      <div class="flex flex-col items-start justify-center flex-1 w-full h-full px-3 lg:p-24 ">
 
         <form role="form" action="" method="post" id="contactform">
           {% csrf_token %}
