--- a/templates/main.html
+++ b/templates/main.html
@@ -9,11 +9,11 @@
     <source src="{{first_product.image.file800.url}}" />
   </video>
   <div class="absolute top-0 left-0 flex flex-col items-start justify-start w-full h-full py-24" style="background-image: linear-gradient(to right, rgba(29, 31, 35, 1) 10%,  rgba(29, 31, 35, 0.9) 50%, rgba(29, 31, 35, 0.6)  100%)">
-    <div class="flex flex-col items-start justify-end w-full h-full px-3 mx-auto mb-24 contianer lg:px-6 md:px-3" style="max-width:1200px;">
-      <h2 class="text-6xl font-bold text-white ">
+    <div class="flex flex-col items-start justify-end  h-full px-3 mx-auto mb-24 container lg:px-6 ">
+      <h2 class="text-lg lg:text-6xl font-bold text-white ">
         The sense of the moments
       </h2>
-      <p class="mt-6 text-xl text-slate500 font-extralight">
+      <p class="mt-6 text-md lg:text-xl text-slate500 font-extralight">
         Experience the spirit of Korean artists on K-NFT Canvas.
       </p>
       <a href="/product" class="mt-24 link_btn">
@@ -24,11 +24,11 @@
 </section>
 {% else%}
 <section class="flex flex-col items-start justify-end w-full min-h-screen py-24" style="background-image: linear-gradient(to right, rgba(29, 31, 35, 1) 10%,  rgba(29, 31, 35, 0.9) 50%, rgba(29, 31, 35, 0.6)  100%), url({{first_product.image.file800.url}}); background-repeat: no-repeat;background-position: center;background-size: cover;">
-  <div class="flex flex-col items-start justify-end w-full h-full px-3 mx-auto mb-24 contianer lg:px-6 md:px-3" style="max-width:1200px;">
-    <h2 class="text-6xl font-bold text-white ">
+  <div class="flex flex-col items-start justify-end  h-full px-3 mx-auto mb-24 container lg:px-6 ">
+    <h2 class="text-3xl lg:text-6xl font-bold text-white ">
       The sense of the moments
     </h2>
-    <p class="mt-6 text-xl text-slate500 font-extralight">
+    <p class="mt-6 text-lg lg:text-xl text-slate500 font-extralight">
       Experience the spirit of Korean artists on K-NFT Canvas.
     </p>
     <a href="/product" class="mt-24 link_btn">
@@ -39,13 +39,13 @@
 {% endif %}
 
 <!-- the LOVE -->
-<section class="flex flex-col items-center w-full py-24 mx-auto " style="max-width:1200px;">
+<section class="flex flex-col items-center w-full py-24 mx-auto container px-3 lg:px-6">
   <p class="text-xl font-light text-white">Korean Calligraphic NFT Art</p>
   <h2 class="mt-2 text-5xl text-white">
     The LOVE
   </h2>
   <p class="mt-6 text-lg font-light tracking-wider text-justify text-slate500">K-NFT introduces Hangul Calligraphy, a hand-drawn pictogram. Enjoy the works of 'Love', the theme of which were written by Korea's leading calligraphers.</p>
-  <div class="grid grid-cols-3 gap-24 mt-12">
+  <div class="grid grid-cols-1 lg:grid-cols-3 gap-12 lg:gap-24 mt-12 justify-items-center">
     {% for product in main_product  %}
     <div class="relative flex flex-col items-center justify-start col-span-1 overflow-hidden transition-transform duration-200 ease-in-out rounded-lg " style="width: 300px;height: 420px;">
       <div id="fontCard" class="flex flex-col items-start w-full h-full">
