--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,14 +1,14 @@
 {% load static %}
 
-<footer class="flex flex-col items-center justify-center w-full ">
-  <div class="flex flex-col items-center w-full py-6 bg-slate700 ">
+<footer class=" flex flex-col items-center justify-center mx-auto ">
 
-    <div class="flex flex-col items-center justify-center w-full ">
-      <p class="text-lg text-white">
+  <div class="flex flex-col items-center justify-center w-full bg-slate500 py-6">
+    <div class="container mx-auto flex flex-col items-center ">
+      <p class="text-lg text-white w-full text-center">
         Follow us for community events, new collection, and real-time
         updates.
       </p>
-      <div class="flex flex-row items-center mt-3">
+      <div class="flex flex-col lg:flex-row items-center justify-center mt-3 w-full">
         <div class="flex flex-row items-center " style="height:40px">
           <form action='{% url 'contacts:subscription' %}' method="post" class="flex flex-row items-center h-full">
             {% csrf_token %}
@@ -17,7 +17,7 @@
             <button class="h-full px-6 bg-gray-300">Submit</button>
           </form>
         </div>
-        <div class="flex flex-row items-center justify-between ml-3 text-white" style="width: 150px;">
+        <div class="flex flex-row items-center justify-between mt-6 lg:mt-0 lg:ml-3 text-white" style="width: 150px;">
           <a href="https://discord.gg/uCaxSSRDVG" target="_blank" rel="noreferrer">
             <!-- <FaDiscord class="text-2xl hover:text-primary" /> -->
             <i class="text-2xl bi bi-discord hover:text-primary"></i>
@@ -34,17 +34,18 @@
         </div>
       </div>
     </div>
-
   </div>
 
-  <div class="flex flex-row items-center justify-between w-full py-12 bg-black">
-    <div class="container flex flex-row items-start justify-between pb-12 mx-auto" style="max-width:1200px;">
+
+
+  <div class="flex flex-row items-center justify-between w-full py-12 bg-black ">
+    <div class="flex flex-col lg:flex-row items-start justify-between pb-12 p-3 container mx-auto">
       <a href="/" class="flex flex-col items-start">
         <img src="{% static 'img/logo_gray.svg' %}" style="height: 28px; object-fit:contain;""
               alt=" logo" />
       </a>
 
-      <div class="flex flex-col items-end text-slate500">
+      <div class="flex flex-col itemx-start lg:items-end text-slate500 mt-6 lg:mt-0">
         <p class="text-primary">K-NFT in Seattle</p>
         <p class="font-light">
           6007 25th Ave NE, Seattle WA, 98115, USA
@@ -60,15 +61,15 @@
           NFT licensing
         </a>
 
-        <p class="mt-3 font-light text-slate-400">
-          Copyright &copy; <script>
-            document.write(new Date().getFullYear())
-          </script> K-NFT LLC. All
-          rights reserved.
-        </p>
       </div>
     </div>
   </div>
 
+  <p class="font-light text-slate-400 w-full text-slate500 text-center w-full py-3">
+    Copyright &copy; <script>
+      document.write(new Date().getFullYear())
+    </script> K-NFT LLC. All
+    rights reserved.
+  </p>
 
 </footer>
