--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -105,8 +105,8 @@
   }
 </style>
 <div class=" flex flex-col items-center w-full pt-24">
-  <div class="flex flex-col items-stretch justify-between w-full" style="max-width: 1200px; ">
-    <div class="grid grid-cols-2">
+  <div class="flex flex-col items-stretch justify-between w-full contianer mx-auto px-3 lg:px-6">
+    <div class="grid grid-cols-1 lg:grid-cols-2">
       <div class="flex flex-col items-center overflow-hidden rounded-md ">
         {% if product.image.content_type == "mp4" %}
         <video autoplay muted loop poster="{{product.image.thumnail.url}}">
@@ -116,7 +116,7 @@
         <img src="{{product.image.file800.url}}" />
         {% endif %}
       </div>
-      <div class="flex flex-col items-start justify-between px-6 w-full">
+      <div class="flex flex-col items-start justify-between px-6 w-full mt-6 lg:mt-0">
         <div class="flex flex-col items-start w-full">
           <div class="flex flex-row items-center justify-between w-full">
 
