--- a/templates/license.html
+++ b/templates/license.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block page_name %} about {% endblock page_name %}
+{% block page_name %} license {% endblock page_name %}
 
 {%block content %}
 <div class="flex flex-col items-center w-full">
