--- a/templates/about.html
+++ b/templates/about.html
@@ -23,6 +23,45 @@
       K-NFTs are a fundamental aspect of Korea’s digital story, and this website is one of its chapters.
     </p>
   </section>
+
+  <div class="flex flex-col items-center w-full mt-12">
+    <div class="flex flex-col items-center justify-center w-full pt-24 " style="background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 20%, rgba(0, 0, 0, 0.7) 50%,rgba(0, 0, 0, 0.8) 100%), url('{% static "img/loveBack.jpeg" %}') no-repeat center center; height:300px;">
+      <div class="flex flex-col items-center justify-center h-full">
+        <h2 class="text-2xl lg:text-6xl font-bold text-white ">K-NFT Authors</h2>
+        <p class="mt-6 text-xl text-slate500 font-extralight">
+          {{authors.count}} authors
+        </p>
+      </div>
+      <!-- <div class="flex flex-col items-center justify-center     container px-3 lg:px-6 ">
+        <form method='GET' class="grid grid-cols-3 gap-3 w-full  py-3 bg-slate700 px-3 rounded-lg">
+          <input type='text' name='q' value='{{ request.GET.q }}' class="rounded-md px-3  col-span-2 " style="height: 40px;" placeholder="Search by name">
+          <button class="col-span-1 px-3 py-2 bg-slate500  rounded-md cursor-pointer" style="height: 40px;"><i class="bi bi-search"></i></button>
+        </form>
+      </div> -->
+    </div>
+    <section class="mt-24 container mx-auto">
+
+
+      <div class="grid w-full gird-cols-3 lg:grid-cols-5 gap-24 justify-items-center">
+        {% for author in authors %}
+        <a href="/author/{{author.id}}" class="bg-white rounded-md overflow-hidden col-span-1 ">
+          <img src="{{author.avator.file360.url}}" class="object-cover" style="height:160px;" />
+          <div class="p-3 bg-gray-200 w-full">
+            <h2 class="text-xl font-bold">{{author.name}}</h2>
+            <p class="text-slate500">{{author.authDes}}</p>
+          </div>
+        </a>
+
+      </div>
+
+
+
+    </section>
+
+
+
+
+  </div>
   <section class="flex flex-col items-center justify-center py-24 container mx-auto px-3 lg:px-6">
     <h2 class="mt-2 text-5xl text-white">Our Teams</h2>
     <div class="flex flex-col items-center mt-24">
