--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -7,10 +7,10 @@
   </a>
   <nav class="h-full text-white mt-3 lg:mt-0">
     <ul class="flex items-center h-full text-sm font-medium">
-      <li class="lg:ml-6">
+      <!-- <li class="lg:ml-6">
         <a href="{% url "authors:list" %}" class=" hover:text-primary">ARTIST</a>
-      </li>
-      <li class="ml-6">
+      </li> -->
+      <li class="lg:ml-6">
         <a href="{% url "products:productList" %}" class=" hover:text-primary">COLLECTION</a>
       </li>
       <li class="ml-6">
