--- a/templates/about.html
+++ b/templates/about.html
@@ -25,9 +25,9 @@
   </section>
 
   <div class="flex flex-col items-center w-full mt-12">
-    <div class="flex flex-col items-center justify-center w-full pt-24 " style="background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 20%, rgba(0, 0, 0, 0.7) 50%,rgba(0, 0, 0, 0.8) 100%), url('{% static "img/loveBack.jpeg" %}') no-repeat center center; height:300px;">
+    <div class="flex flex-col items-center justify-center w-full pt-24 ">
       <div class="flex flex-col items-center justify-center h-full">
-        <h2 class="text-2xl lg:text-6xl font-bold text-white ">K-NFT Authors</h2>
+        <h2 class="mt-2 text-2xl lg:text-5xl text-white">K-NFT Authors</h2>
         <p class="mt-6 text-xl text-slate500 font-extralight">
           {{authors.count}} authors
         </p>
@@ -51,7 +51,7 @@
             <p class="text-slate500">{{author.authDes}}</p>
           </div>
         </a>
-
+        {% endfor %}
       </div>
 
 
@@ -62,8 +62,9 @@
 
 
   </div>
+
   <section class="flex flex-col items-center justify-center py-24 container mx-auto px-3 lg:px-6">
-    <h2 class="mt-2 text-5xl text-white">Our Teams</h2>
+    <h2 class="mt-2 text-2xl lg:text-5xl text-white">Our Teams</h2>
     <div class="flex flex-col items-center mt-24">
       <div class="flex flex-col lg:flex-row  items-center lg:items-start ">
         <img src="{% static 'img/jaehee.jpg' %}" alt="jaehee_profil" style="width: 200px;height: 200px; border-radius: 200px;" />
@@ -137,8 +138,6 @@
 
 
 </div>
-
-
 
 
 {% endblock content %}
