--- a/templates/about.html
+++ b/templates/about.html
@@ -86,7 +86,7 @@
       </div>
       <div class="flex flex-col lg:flex-row  items-center lg:items-start mt-12">
         <img src="{% static 'img/eugene.jpg' %}" alt="jaehee_profil" style="width: 200px;height: 200px; border-radius: 200px;" />
-        <div class="flex flex-col lg:flex-row  items-center lg:items-start ">
+        <div class="flex flex-col items-center lg:items-start justify-between h-full lg:ml-12">
 
           <p class="text-2xl text-white">Eugene KIM</p>
           <p class="mt-1 text-sm text-slate500">
@@ -112,8 +112,7 @@
       </div>
       <div class="flex flex-col lg:flex-row  items-center lg:items-start mt-12">
         <img src="{% static 'img/geunwook.jpg' %}" alt="jaehee_profil" style="width: 200px;height: 200px; border-radius: 200px;" />
-        <div class="flex flex-col lg:flex-row  items-center lg:items-start ">
-
+        <div class="flex flex-col items-center lg:items-start justify-between h-full lg:ml-12">
           <p class="text-2xl text-white">Geun-wook LEE</p>
           <p class="mt-1 text-sm text-slate500">
             Co-founder, Managing director
