--- a/templates/authors/author_detail.html
+++ b/templates/authors/author_detail.html
@@ -50,7 +50,7 @@
 
   </div>
   <section class="grid w-full grid-cols-3 gap-6 flex-1 mt-6 container mx-auto">
-    <div class="col-span-3 lg:col-spans-2 px-3 lg:p-0 ">
+    <div class="col-span-3 lg:col-span-1 px-3 lg:p-0 ">
       <div class="flex flex-row items-center">
         <img src="{{author.avator.thumnail.url}}" style="width: 80px;height: 80px;" class="border-2 rounded-full overflow-hidden" />
         <div class="ml-6 ">
