--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,7 @@
   <div class="absolute top-0 left-0 flex flex-col items-start justify-start w-full h-full py-24" style="background-image: linear-gradient(to right, rgba(29, 31, 35, 1) 10%,  rgba(29, 31, 35, 0.9) 50%, rgba(29, 31, 35, 0.6)  100%)">
     <div class="flex flex-col items-start justify-end  h-full px-3 mx-auto mb-24 container lg:px-6 ">
       <h2 class="text-lg lg:text-6xl font-bold text-white ">
-        The sense of the moments
+        Beauty in every stroke
       </h2>
       <p class="mt-6 text-md lg:text-xl text-slate500 font-extralight">
         Experience the spirit of Korean artists on K-NFT Canvas.
