--- a/templates/authors/author_detail.html
+++ b/templates/authors/author_detail.html
@@ -42,7 +42,7 @@
 <div class="flex flex-col items-center w-full min-h-screen ">
   <div class="flex flex-col items-center justify-center w-full pt-24 pb-12" style="background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 20%, rgba(0, 0, 0, 0.7) 50%,rgba(0, 0, 0, 0.8) 100%), url('{% static "img/loveBack.jpeg" %}') no-repeat center center; height:300px;">
     <div class="flex flex-col items-center justify-center h-full">
-      <h2 class="text-2xl lg:text-6xl font-bold text-white ">{{author.name}}'s Collection</h2>
+      <h2 class="text-2xl lg:text-6xl font-bold text-white ">{{author.name}}'s Works</h2>
       <p class="mt-6 text-xl text-slate500 font-extralight">
         {{count}} works
       </p>
