--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -239,7 +239,7 @@
   </div>
 
   <p class="text-white text-lg mt-6">YOU MAY ALSO LIKE</p>
-  <div class="py-12 flex flex-col items-center container ">
+  <div class="py-12 flex flex-col items-center container " style="width:1200px">
 
     <div id="image-slider" class="splide w-full">
       <div class="w-full splide__track">
