--- a/templates/authors/author_detail.html
+++ b/templates/authors/author_detail.html
@@ -98,7 +98,7 @@
           <div id="fontCard" class="flex flex-col items-start w-full h-full">
             <div class="flex flex-col items-center justify-start w-full bg-white" id="card">
               {% if project.image.content_type == "mp4" %}
-              <video autoplay muted loop poster="{{project.image.thumnail.url}}" class="object-cover cursor-pointer w-full " style="height: 220px;">
+              <video autoplay muted loop poster="{{project.image.thumnail.url}}" class="object-cover cursor-pointer w-full " style="height: 220px;" playsinline>
                 <source src="{{project.image.file360.url}}" />
               </video>
               {% else %}
@@ -126,7 +126,7 @@
           <div id="fontCard" class="flex flex-col items-start w-full h-full">
             <div class="flex flex-col items-center justify-start w-full bg-white" id="card">
               {% if edition.image.content_type == "mp4" %}
-              <video autoplay muted loop poster="{{edition.image.thumnail.url}}" class="object-cover cursor-pointer " style="width:200px;height: 220px;">
+              <video autoplay muted loop poster="{{edition.image.thumnail.url}}" class="object-cover cursor-pointer " style="width:200px;height: 220px;" playsinline>
                 <source src="{{edition.image.file360.url}}" />
               </video>
               {% else %}
@@ -154,7 +154,7 @@
           <div id="fontCard" class="flex flex-col items-start w-full h-full">
             <div class="flex flex-col items-center justify-start w-full bg-white" id="card">
               {% if other.image.content_type == "mp4" %}
-              <video autoplay muted loop poster="{{other.image.thumnail.url}}" class="object-cover cursor-pointer " style="width:200px;height: 220px;">
+              <video autoplay muted loop playsinline poster="{{other.image.thumnail.url}}" class="object-cover cursor-pointer " style="width:200px;height: 220px;">
                 <source src="{{other.image.file360.url}}" />
               </video>
               {% else %}
