--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,7 @@
 <!-- first -->
 {% if first_product.image.content_type == "mp4" %}
 <section class="relative w-full h-screen m-auto overflow-hidden">
-  <video autoplay muted loop poster="{{first_product.image.thumnail.url}}" class="object-cover w-full h-full">
+  <video autoplay muted playsinline loop poster="{{first_product.image.thumnail.url}}" class="object-cover w-full h-full">
     <source src="{{first_product.image.file800.url}}" />
   </video>
   <div class="absolute top-0 left-0 flex flex-col items-start justify-start w-full h-full py-24" style="background-image: linear-gradient(to right, rgba(29, 31, 35, 1) 10%,  rgba(29, 31, 35, 0.9) 50%, rgba(29, 31, 35, 0.6)  100%)">
@@ -51,7 +51,7 @@
       <div id="fontCard" class="flex flex-col items-start w-full h-full">
         <div class="flex flex-col items-center justify-start w-full bg-white" id="card">
           {% if product.image.content_type == "mp4" %}
-          <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer " style="height: 300px;width: 300px;">
+          <video autoplay muted playsinline loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer " style="height: 300px;width: 300px;">
             <source src="{{product.image.file360.url}}" />
           </video>
           {% else %}
