--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -109,7 +109,7 @@
     <div class="grid grid-cols-1 lg:grid-cols-2">
       <div class="flex flex-col items-center overflow-hidden rounded-md ">
         {% if product.image.content_type == "mp4" %}
-        <video autoplay muted loop poster="{{product.image.thumnail.url}}">
+        <video autoplay muted loop poster="{{product.image.thumnail.url}}" playsinline>
           <source src="{{product.image.file800.url}}" />
         </video>
         {% else %}
@@ -248,7 +248,7 @@
           <a href="/product/{{otherProduct.pk}}">
             <li class="splide__slide">
               {% if otherProduct.image.content_type == "mp4" %}
-              <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer w-full h-full">
+              <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer w-full h-full" playsinline>
                 <source src="{{otherProduct.image.file360.url}}" />
               </video>
               {% else %}
