--- a/templates/main.html
+++ b/templates/main.html
@@ -26,7 +26,7 @@
 <section class="flex flex-col items-start justify-end w-full min-h-screen py-24" style="background-image: linear-gradient(to right, rgba(29, 31, 35, 1) 10%,  rgba(29, 31, 35, 0.9) 50%, rgba(29, 31, 35, 0.6)  100%), url({{first_product.image.file800.url}}); background-repeat: no-repeat;background-position: center;background-size: cover;">
   <div class="flex flex-col items-start justify-end  h-full px-3 mx-auto mb-24 container lg:px-6 ">
     <h2 class="text-3xl lg:text-6xl font-bold text-white ">
-      The sense of the moments
+      Beauty in every stroke
     </h2>
     <p class="mt-6 text-lg lg:text-xl text-slate500 font-extralight">
       Experience the spirit of Korean artists on K-NFT Canvas.
