--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -34,12 +34,12 @@
       </p>
     </div>
     <div class="flex flex-col items-center justify-center py-3 bg-slate700  rounded-lg px-3 container px-3 lg:px-6 mx-auto">
-      <form name=" myForm" method="GET" action="{% url "products:productList" %}" class="grid grid-cols-3 lg:grid-cols-9 gap-3 w-full ">
-        <div class=" flex flex-col items-start col-span-1 lg:col-span-2 ">
+      <form name=" myForm" method="GET" action="{% url "products:productList" %}" class="grid grid-cols-3 lg:grid-cols-12 gap-3 w-full ">
+        <div class=" flex flex-col items-start col-span-1 lg:col-span-4 ">
           <label for=" title" class="text-slate500">Title</label>
           <input value="{{form.title}}" id="title" name="title" placeholder="Search By Title" class="text-balck bg-slate500  rounded-md w-full px-2 py-2 " style="height: 40px;" />
         </div>
-        <div class="flex flex-col items-start   col-span-1 lg:col-span-2 ">
+        <div class="flex flex-col items-start   col-span-1 lg:col-span-4 ">
           <label for="type" class="text-slate500">Type</label>
           <select id="type" name="type" class="px-3 py-2 bg-slate500  rounded-md w-full " style="height: 40px;">
             <option value="0" {% if form.s_types == 0 %}selected{% endif %}>
@@ -50,7 +50,7 @@
             {% endfor %}
           </select>
         </div>
-        <div class="flex flex-col items-start   col-span-1 lg:col-span-2">
+        <div class="flex flex-col items-start   col-span-1 lg:col-span-4">
           <label for="project_type" class="text-slate500">Project Type</label>
           <select id="project_type" name="project_type" class="px-3 py-2 bg-slate500  rounded-md w-full " style="height: 40px;">
             <option value="0" {% if form.s_project_types == 0 %}selected{% endif %}>all</option>
@@ -60,7 +60,7 @@
           </select>
         </div>
 
-        <div class="flex flex-col items-start w-full">
+        <div class="flex flex-col items-start col-span-1 lg:col-span-4">
           <p class="text-slate500">Created At</p>
           <div class="grid grid-cols-2  w-full rounded-md overflow-hidden">
             <label name="createdAt_id_sort_up" for="createdAt_id_sort_up" class="box-radio-input flex flex-col items-center ">
@@ -74,7 +74,7 @@
             </label>
           </div>
         </div>
-        <div class="flex flex-col items-start">
+        <div class="flex flex-col items-start col-span-1 lg:col-span-4">
           <p class="text-slate500">Price</p>
           <div class="grid grid-cols-2  w-full rounded-md overflow-hidden">
             <label name="price_id_sort_up" for="price_id_sort_up" class="box-radio-input flex flex-col items-center ">
@@ -89,7 +89,7 @@
           </div>
 
         </div>
-        <div class="w-full flex flex-col items-center justify-end">
+        <div class="flex flex-col items-center justify-end col-span-1 lg:col-span-4">
           <button class="px-3 py-2 bg-slate500 w-full rounded-md" style="height: 40px;"><i class="bi bi-search"></i></button>
         </div>
       </form>
