--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -242,20 +242,20 @@
   <div class="py-12 flex flex-col items-center container px-3 lg:px-6 ">
 
 
-    <div class="w-full slide_slick w-full">
+    <div class=" slide_slick w-full">
 
       {% for otherProduct in otherProducts %}
-      <a href="/product/{{otherProduct.pk}}">
-        <div class="">
+      <div>
+        <a href="/product/{{otherProduct.pk}}">
           {% if otherProduct.image.content_type == "mp4" %}
-          <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer w-full h-full" playsinline>
+          <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer w-full h-full" playsinline style="width:290px;height:290px">
             <source src="{{otherProduct.image.file360.url}}" />
           </video>
           {% else %}
-          <img src="{{otherProduct.image.file360.url}}" class="cursor-pointer w-full h-full object-cover" />
+          <img src="{{otherProduct.image.file360.url}}" class="cursor-pointer w-full h-full object-cover" style="width:290px;height:290px" />
           {% endif %}
-        </div>
-      </a>
+        </a>
+      </div>
       {% endfor %}
 
     </div>
@@ -264,12 +264,13 @@
   </div>
 </div>
 <script>
-  $(document).ready(function() {
+  document.addEventListener('DOMContentLoaded', function() {
     $('.slide_slick').slick({
       dots: true,
       infinite: false,
       slidesToShow: 4,
       slidesToScroll: 4,
+
       responsive: [{
           breakpoint: 1024,
           settings: {
@@ -298,8 +299,6 @@
         // instead of a settings object
       ]
     });
-  });
-  document.addEventListener('DOMContentLoaded', function() {
     // new Splide('#image-slider', {
     //   perPage: 3,
     //   rewind: true,
