--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -269,29 +269,44 @@
       dots: true,
       infinite: false,
       slidesToShow: 4,
-      slidesToScroll: 4,
+      slidesToScroll: 1,
+      autoplay: true,
+      autoplaySpeed: 2000,
 
       responsive: [{
           breakpoint: 1024,
           settings: {
+            dots: true,
+            infinite: false,
             slidesToShow: 4,
-            slidesToScroll: 4,
-            infinite: true,
-            dots: true
+            slidesToScroll: 1,
+            autoplay: true,
+            autoplaySpeed: 2000,
+
           }
         },
         {
           breakpoint: 600,
           settings: {
-            slidesToShow: 2,
-            slidesToScroll: 2
+            s dots: true,
+            infinite: false,
+            slidesToShow: 4,
+            slidesToScroll: 1,
+            autoplay: true,
+            autoplaySpeed: 2000,
+
           }
         },
         {
           breakpoint: 480,
           settings: {
-            slidesToShow: 1,
-            slidesToScroll: 1
+            dots: true,
+            infinite: false,
+            slidesToShow: 4,
+            slidesToScroll: 1,
+            autoplay: true,
+            autoplaySpeed: 2000,
+
           }
         }
         // You can unslick at a given breakpoint now by adding:
