--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -272,47 +272,48 @@
       slidesToScroll: 1,
       autoplay: true,
       autoplaySpeed: 2000,
+      arrow: true
 
-      responsive: [{
-          breakpoint: 1024,
-          settings: {
-            dots: true,
-            infinite: false,
-            slidesToShow: 4,
-            slidesToScroll: 1,
-            autoplay: true,
-            autoplaySpeed: 2000,
+      // responsive: [{
+      //     breakpoint: 1024,
+      //     settings: {
+      //       dots: true,
+      //       infinite: false,
+      //       slidesToShow: 4,
+      //       slidesToScroll: 1,
+      //       autoplay: true,
+      //       autoplaySpeed: 2000,
 
-          }
-        },
-        {
-          breakpoint: 600,
-          settings: {
-            s dots: true,
-            infinite: false,
-            slidesToShow: 4,
-            slidesToScroll: 1,
-            autoplay: true,
-            autoplaySpeed: 2000,
+      //     }
+      //   },
+      //   {
+      //     breakpoint: 600,
+      //     settings: {
+      //       s dots: true,
+      //       infinite: false,
+      //       slidesToShow: 4,
+      //       slidesToScroll: 1,
+      //       autoplay: true,
+      //       autoplaySpeed: 2000,
 
-          }
-        },
-        {
-          breakpoint: 480,
-          settings: {
-            dots: true,
-            infinite: false,
-            slidesToShow: 4,
-            slidesToScroll: 1,
-            autoplay: true,
-            autoplaySpeed: 2000,
+      //     }
+      //   },
+      //   {
+      //     breakpoint: 480,
+      //     settings: {
+      //       dots: true,
+      //       infinite: false,
+      //       slidesToShow: 4,
+      //       slidesToScroll: 1,
+      //       autoplay: true,
+      //       autoplaySpeed: 2000,
 
-          }
-        }
-        // You can unslick at a given breakpoint now by adding:
-        // settings: "unslick"
-        // instead of a settings object
-      ]
+      //     }
+      //   }
+      //   // You can unslick at a given breakpoint now by adding:
+      //   // settings: "unslick"
+      //   // instead of a settings object
+      // ]
     });
     // new Splide('#image-slider', {
     //   perPage: 3,
