--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -266,7 +266,7 @@
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     $('.slide_slick').slick({
-      slide: 'div',
+      slide: 'a',
       dots: true,
       arrows: true,
       autoplay: ture,
